# backtest-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  run_all_strategies.sh  sweep.sh  tune_and_validate.sh
docs/plans/: 2026-04-04-backtest-platform-design.md  2026-04-04-backtest-platform-implementation.md  2026-04-04-deterministic-llm-restructure-plan.md  2026-04-04-deterministic-llm-strategy-restructure-design.md  2026-04-04-engine-gaps-design.md  2026-04-04-engine-gaps-implementation-plan.md  2026-04-04-enhanced-strategy-interface-design.md  2026-04-04-multi-timeframe-design.md  2026-04-05-first-principles-refactor-design.md  2026-04-05-intraday-5min-strategies-design.md  (+13 more)
engine/: Cargo.toml
engine/crates/cli/: Cargo.toml
engine/crates/cli/src/: main.rs
engine/crates/cli/src/commands/: data.rs  mod.rs  results.rs  run.rs
engine/crates/core/: Cargo.toml
engine/crates/core/src/: calendar.rs  config.rs  costs.rs  engine.rs  grpc_client.rs  lib.rs  matching.rs  metrics.rs  portfolio.rs  reporter.rs  types.rs
engine/crates/data/: Cargo.toml
engine/crates/data/src/: candles.rs  instruments.rs  kite.rs  lib.rs
engine/crates/proto/: Cargo.toml  build.rs
engine/crates/proto/proto/: strategy.proto
engine/crates/proto/src/: lib.rs
strategies/: generate_proto.sh  pyproject.toml
strategies/server/: registry.py  server.py
strategies/strategies/: base.py  experience_manager.py  indicators.py  llm_base.py  llm_client.py  narrative_builder.py  position_manager.py
strategies/strategies/deterministic/: bollinger_squeeze.py  confluence.py  donchian_breakout.py  ensemble_meta.py  intraday_momentum.py  ml_classifier.py  multi_tf_confirm.py  orb_breakout.py  ou_mean_reversion.py  pairs_trading.py  portfolio_combiner.py  regime_adaptive.py  relative_strength.py  rsi_daily_trend.py  sma_crossover.py  time_adaptive.py  vwap_reversion.py
strategies/strategies/examples/: donchian_breakout.py  rsi_daily_trend.py  sma_crossover.py
strategies/strategies/llm/: llm_autonomous_trader.py  llm_signal_generator.py
strategies/tests/: test_bollinger_squeeze.py  test_confluence.py  test_donchian_breakout.py  test_ensemble_meta.py  test_experience_manager.py  test_indicators.py  test_intraday_momentum.py  test_llm_autonomous_trader.py  test_llm_base.py  test_llm_client.py  test_llm_signal_generator.py  test_ml_classifier.py  test_multi_tf_confirm.py  test_narrative_builder.py  test_orb_breakout.py  test_ou_mean_reversion.py  test_pairs_trading.py  test_portfolio_combiner.py  test_position_manager.py  test_regime_adaptive.py  test_relative_strength.py  test_rsi_daily_trend.py  test_sma_crossover.py  test_time_adaptive.py  test_vwap_reversion.py
tests/: e2e_test.sh
