[project]
name = "backtest-strategies"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68",
    "grpcio-tools>=1.68",
    "protobuf>=5",
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "pandas-ta>=0.3.14b1",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["server*", "strategies*"]
